fixed image spacings

--- a/src/mobile/index.css
+++ b/src/mobile/index.css
@@ -23,7 +23,7 @@
   @apply font-bold text-4xl;
 }
 
-img {
+.mobile-img {
   max-width: 100%; /* Ensure the image is responsive */
   height: auto; /* Maintain aspect ratio */
   margin: 0 auto; /* Center the image */
